# osqp-python

./: .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  cibuildwheel.toml  conda_build_config.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  startup.sh
.github/: dependabot.yaml
.github/workflows/: build.yml  build_aarch64.yml  build_cuda.yml  build_cuda_windows.yml  build_default.yml  build_mkl.yml  build_mkl_windows.yml  build_wasm.yml  pre_commit.yml  prepare_build_environment_linux.sh  prepare_build_environment_linux_cuda.sh  prepare_build_environment_linux_mkl.sh  prepare_build_environment_macos_mkl.sh  prepare_build_environment_windows_cuda.sh  prepare_build_environment_windows_mkl.sh
backend/cuda/: cibuildwheel.toml  pyproject.toml
backend/mkl/: cibuildwheel.toml  pyproject.toml
ci/: pypirc
ci/appveyor/: deploy.cmd  install.cmd  script.cmd
ci/travis/: build-wheels.sh  deploy.sh  install.sh  manylinux.sh  script.sh
cmake/: README.md  memory.h  printing.h
conda-recipe/: conda_build_config.yaml  meta.yaml
conda_recipe/osqp/: meta.yaml
examples/: basic_usage.py  code_generation.py  exception_handling.py  update_matrices.py  update_vectors.py
extension/include/: osqpinfopy.h  osqpmodulemethods.h  osqpobjectpy.h  osqpresultspy.h  osqputilspy.h  osqpworkspacepy.h
extension/src/: .gitignore  osqpmodule.c
module/: __init__.py  interface.py  utils.py
module/codegen/: code_generator.py  utils.py
module/codegen/files_to_generate/: CMakeLists.txt  emosqpmodule.c  setup.py
module/tests/: basic_test.py  codegen_matrices_test.py  codegen_vectors_test.py  derivative_test.py  dual_infeasibility_test.py  feasibility_test.py  mkl_pardiso_test.py  multithread_test.py  non_convex_test.py  polishing_test.py  primal_infeasibility_test.py  unconstrained_test.py  update_matrices_test.py  utils.py  warm_start_test.py
modulepurepy/: _osqp.py  interface.py
src/: bindings.cpp  bindings.cpp.in
src/ext/: CMakeLists.txt
src/ext/include/: hello.h
src/ext/src/: hello.cpp
src/extension/include/: osqpobjectpy.h  osqpworkspacepy.h
src/extension2/src/: spammodule.c
src/module/: __init__.py
src/module/codegen/: utils.py
src/module/tests/: basic_test.py
src/osqp/: __init__.py  builtin.py  cuda.py  default.py  interface.py  mkl.py  new_interface.py  nn.py  utils.py
src/osqp/codegen/: code_generator.py  utils.py
src/osqp/codegen/files_to_generate/: CMakeLists.txt  setup.py
src/osqp/codegen/pywrapper/: CMakeLists.txt.jinja  bindings.cpp.jinja  setup.py.jinja
src/osqp/codegen/templates/: CMakeLists.txt  bindings.cpp  setup.py
src/osqp/new_codegen/: __init__.py
src/osqp/nn/: torch.py
src/osqp/tests/: basic_test.py  codegen_lp_test.py  codegen_matrices_test.py  codegen_vectors_test.py  conftest.py  derivative_test.py  dual_infeasibility_test.py  feasibility_test.py  mkl_pardiso_test.py  multithread_test.py  nn_test.py  non_convex_test.py  polishing_test.py  primal_infeasibility_test.py  test_basic.py  test_spam.py  unconstrained_test.py  update_matrices_test.py  utils.py  warm_start_test.py
src/osqp/tests/solutions/: test_basic_QP.npz  test_dual_infeasibility.npz  test_feasibility_problem.npz  test_polish_random.npz  test_polish_simple.npz  test_polish_unconstrained.npz  test_primal_infeasibility.npz  test_solve.npz  test_update_A_allind.npz  test_update_P_A_allind.npz  test_update_P_allind.npz  test_update_bounds.npz  test_update_l.npz  test_update_q.npz  test_update_u.npz
src/osqppurepy/: __init__.py  _osqp.py  interface.py
tests/general/: small_prob.py
