[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "osqp"
dynamic = ["version"]
description = "OSQP: The Operator Splitting QP Solver"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Bartolomeo Stellato", email = "bartolomeo.stellato@gmail.com" },
    { name = "Goran Banjac" },
]
dependencies = [
    "jinja2",
    "numpy>=1.7",
    "scipy>=0.13.2",
    "setuptools",
    "joblib",
]

[project.optional-dependencies]
cuda = [
    "osqp-cuda",
]
dev = [
    "pre-commit",
    "pytest>=6",
    "torch",

    # Exclude scipy 1.12 because the random sparse array function started returning
    # the transpose of the original, breaking the unit tests. This was fixed in 1.13.0.
    # This shouldn't actually affect the users, so there shouldn't be a need to exclude
    # 1.12 on a user's machine.
    # ref: https://github.com/scipy/scipy/issues/20027
    "scipy!=1.12.0",
]
mkl = [
    "osqp-mkl",
]

[project.urls]
Homepage = "https://osqp.org/"


[tool.scikit-build]
install.components = ["python", "codegen"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.8"
wheel.install-dir = "osqp"
sdist.include = ["src/osqp/_version.py"]


[tool.scikit-build.cmake.define]
OSQP_ALGEBRA_BACKEND = "builtin"
OSQP_EXT_MODULE_NAME = "ext_builtin"
CMAKE_OSX_ARCHITECTURES = {env="CMAKE_OSX_ARCHITECTURES"}

[tool.pytest.ini_options]
testpaths = ["src/osqp/tests"]

[tool.cibuildwheel]
# Install the dependencies needed when testing the built wheels
test-extras = ["dev"]

[tool.setuptools_scm]
write_to = "src/osqp/_version.py"
