[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "osqp"
dynamic = ["version"]
description = "OSQP: The Operator Splitting QP Solver"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Bartolomeo Stellato", email = "bartolomeo.stellato@gmail.com" },
    { name = "Goran Banjac" },
    { name = "Vineet Bansal", email = "vineetbansal@protonmail.com" },
    { name = "Amit Solomon", email = "as3993@princeton.edu" },
    { name = "Henry Schreiner", email = "HenrySchreinerIII@gmail.com" },
]
dependencies = [
    "jinja2",
    "numpy>=1.7",
    "scipy>=0.13.2,!=1.12.0",
    "setuptools",
    "joblib",
]

[project.urls]
Homepage = "https://osqp.org/"

[project.optional-dependencies]
mkl = [
    "osqp-mkl",
]
# Include this `dev` extra till pip completely supports PEP735
dev = [
    "pre-commit",
    "pytest>=6",
    "torch",

    # Exclude scipy 1.12 because the random sparse array function started returning
    # the transpose of the original, breaking the unit tests. This was fixed in 1.13.0.
    # This shouldn't actually affect the users, so there shouldn't be a need to exclude
    # 1.12 on a user's machine.
    # ref: https://github.com/scipy/scipy/issues/20027
    "scipy!=1.12.0",
]
cuda = [
    "osqp-cuda",
]

[dependency-groups]
# Exclude scipy 1.12 because the random sparse array function started returning
# the transpose of the original, breaking the unit tests. This was fixed in 1.13.0.
# This shouldn't actually affect the users, so there shouldn't be a need to exclude
# 1.12 on a user's machine.
# ref: https://github.com/scipy/scipy/issues/20027

# Some newer platforms (e.g. cp313-macosx_x86_64 as of 03/13/25), do not
# support installation of torch at all, which is why it is useful to have this
# dependency group.
test-no-nn = ["pytest>=6"]
test = ["torch", "scipy!=1.12.0", { include-group = "test-no-nn" }]
dev = ["pre-commit", { include-group = "test" }]

[tool.scikit-build]
install.components = ["python", "codegen"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.8"
wheel.install-dir = "osqp"
sdist.include = ["src/osqp/_version.py"]

[tool.scikit-build.cmake.define]
OSQP_ALGEBRA_BACKEND = "builtin"
OSQP_EXT_MODULE_NAME = "ext_builtin"
OSQP_ENABLE_INTERRUPT = {env="OSQP_ENABLE_INTERRUPT"}
OSQP_CODEGEN = {env="OSQP_CODEGEN"}
OSQP_BUILD_SHARED_LIB = {env="OSQP_BUILD_SHARED_LIB"}
CMAKE_OSX_ARCHITECTURES = {env="CMAKE_OSX_ARCHITECTURES"}

[tool.pytest.ini_options]
testpaths = ["src/osqp/tests"]

[tool.cibuildwheel]
build = "cp3*"
skip = ["cp36-*", "cp37-*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]
build-verbosity = 1
before-build = "rm -rf {package}/osqp_sources/build"
# Install CPU-only version of torch beforehand since that allows cibuildwheel
# to satisfy the "test" dependency group install, but much faster. The runtime
# cost of torch-based osqp tests are considered negligible so torch-cpu is ok.
before-test = "pip install torch --index-url https://download.pytorch.org/whl/cpu"
test-groups = ["test"]
test-command = "python -m pytest -s {project}/src/osqp/tests"

[tool.cibuildwheel.macos]
# 02/13/25 - Skip testing on cp313-macosx_x86_64 because torch/numpy deps are unsatisfiable
test-skip = "cp313-macosx_x86_64"

[tool.cibuildwheel.pyodide]
build = "cp312-pyodide_wasm32"
before-test = ""
test-groups = ["test-no-nn"]
test-command = "python -m pytest -s {project}/src/osqp/tests --continue-on-collection-errors --ignore={project}/src/osqp/tests/multithread_test.py --ignore={project}/src/osqp/tests/nn_test.py --ignore-glob=\"{project}/src/osqp/tests/codegen*.py\""
environment = { OSQP_ENABLE_INTERRUPT = "OFF", OSQP_CODEGEN = "OFF", OSQP_BUILD_SHARED_LIB = "OFF" }

[tool.setuptools_scm]
write_to = "src/osqp/_version.py"
