[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "osqp"
dynamic = ["version"]
description = "OSQP: The Operator Splitting QP Solver"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Bartolomeo Stellato", email = "bartolomeo.stellato@gmail.com" },
    { name = "Goran Banjac" },
    { name = "Vineet Bansal", email = "vineetbansal@protonmail.com" },
    { name = "Amit Solomon", email = "as3993@princeton.edu" },
    { name = "Henry Schreiner", email = "HenrySchreinerIII@gmail.com" },
]
dependencies = [
    "jinja2",
    "numpy>=1.7",
    "scipy>=0.13.2",
    "setuptools",
    "joblib",
]

[project.urls]
Homepage = "https://osqp.org/"

[project.optional-dependencies]
mkl = [
    "osqp-mkl",
]
# Include this `dev` extra till pip completely supports PEP735
dev = [
    "pre-commit",
    "pytest>=6",
    "torch",

    # Exclude scipy 1.12 because the random sparse array function started returning
    # the transpose of the original, breaking the unit tests. This was fixed in 1.13.0.
    # This shouldn't actually affect the users, so there shouldn't be a need to exclude
    # 1.12 on a user's machine.
    # ref: https://github.com/scipy/scipy/issues/20027
    "scipy!=1.12.0",
]
cu12 = [
    "osqp-cu12",
]

[dependency-groups]
# Exclude scipy 1.12 because the random sparse array function started returning
# the transpose of the original, breaking the unit tests. This was fixed in 1.13.0.
# This shouldn't actually affect the users, so there shouldn't be a need to exclude
# 1.12 on a user's machine.
# ref: https://github.com/scipy/scipy/issues/20027

# Some newer platforms (e.g. cp313-macosx_x86_64 as of 03/13/25), do not
# support installation of torch at all, which is why it is useful to have this
# dependency group.
test-no-nn = ["pytest>=6"]
test = ["torch", "scipy!=1.12.0", { include-group = "test-no-nn" }]
dev = ["pre-commit", { include-group = "test" }]

[tool.scikit-build]
install.components = ["python", "codegen"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.8"
wheel.install-dir = "osqp"
sdist.include = ["src/osqp/_version.py"]

[tool.scikit-build.cmake.define]
OSQP_ALGEBRA_BACKEND = "builtin"
OSQP_EXT_MODULE_NAME = "ext_builtin"
OSQP_ENABLE_INTERRUPT = {env="OSQP_ENABLE_INTERRUPT"}
OSQP_CODEGEN = {env="OSQP_CODEGEN"}
OSQP_BUILD_SHARED_LIB = {env="OSQP_BUILD_SHARED_LIB"}
CMAKE_OSX_ARCHITECTURES = {env="CMAKE_OSX_ARCHITECTURES"}

[tool.pytest.ini_options]
testpaths = ["src/osqp/tests"]

[tool.setuptools_scm]
write_to = "src/osqp/_version.py"
